--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # Dependencies
-node_modules/
+/node_modules
+/backend/node_modules
+
+# Build output
+/dist
+/build
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -7,46 +16,3 @@ yarn-error.log*
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build outputs
-build/
-dist/
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs
-logs/
-*.log
-
-# Database
-*.sqlite
-*.db
-
-# Temporary files
-tmp/
-temp/
-
-# Coverage reports
-coverage/
-
-# React
-src/**/*.test.js
-src/**/*.spec.js
-
-# Backend
-backend/uploads/
-backend/logs/
-
-# MongoDB data (if running locally)
-mongodb-data/
