--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
+    "mongoose": "^8.19.2",
     "nodemon": "^3.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
