--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,23 @@
 {
   "name": "fixnow-backend",
   "version": "1.0.0",
-  "description": "Backend for FixNow - User Authentication with Node.js, Express.js, and MongoDB",
+  "description": "Backend for FixNow - RESTful API with Node.js, Express.js, and MongoDB",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
-    "path": "^0.12.7"
+    "stripe": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
