Update environment files

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/fixnow
+MONGO_URI=mongodb+srv://asrithnalluri522_db_user:Nalluri%232005@fixnow.zlvbvp9.mongodb.net/?appName=fixnow
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
